			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * DOC: Many typos fixed in the documentation by Paulo Moura.  Thanks!

  * FIXED/MODIFIED: thread_send_message/2, thread_get_message/2,
    thread_peek_message/2 and message_queue_size/2 now raise an exception
    if the queue doesn't exist instead of creating a queue.  Paulo
    Moura.

  * ADDED: Library ugraphs.pl.  Unweigthed graph library.  Copied from
    YAP.  Integrated into SWI-Prolog library and documentation.

  * FIXED: Bug#160: Track called as result of auto-import from module
    user.  Holger Kanwischer.

  * FIXED: Bug#158: XREF handling of arithmetic_function directive with
    module qualifier.  Holger Kanwischer.

  * CLEANUP: Removed win32s support (windows 3.1 extender).

  * MODIFIED: use goal_expansion/2 on directives.

  * ADDED/MODIFIED: library-independent unicode support for parsing text.
    This modified atom/variable syntax for sourcecode holding characters
    above 255.  Also made changes to singleton variable handling.  See
    manual for details (section "Unicode Prolog source").

  * FIXED: possible crash after abort.

  * FIXED/ENHANCED: Cross-referencer: fixed two runtime errors.  Added support
    for M:P calls (bug#154).  Allow dropping directories from file-tree to
    dependency view.  Give the user something to see during the analysis.


==============================
VERSION 5.6.9 (March 26, 2006)
==============================

  * ADDED: library(prolog_xref): Cross-referencer core.  Documented cross
    referencer interfaces

  * FIXED: exception hook clears debugmode.

  * PORT: Some Windows path problems and cleanup issues.  Patch by
    Marc-Antoine Ruel.

  * FIXED: Behaviour of term_variables/2,3 in the tracer.  Leslie de
    Koninck.
